--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
-    
+
 </head>
+
 <body>
     <header>
         <div class="navbar">
@@ -20,91 +22,104 @@
             <p>front-end devoleper</p>
         </div>
         <div class="container-navigation">
-        <nav class="navigation">
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <hr color="yellow">
-                <li><a href="#projects">Projetos</a></li>
-                <hr color="yellow">
-                <li><a href="https://github.com/otaviob12" target="_blank">GitHub</a></li>
-                <hr color="yellow">
-                <li><a href="https://www.linkedin.com/in/otavio-augusto-grandsire-baroni-58884515b/" target="_blank">Linkedin</a></li>
-            </ul>
-        </nav>
-    </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <hr color="yellow">
+                    <li><a href="#projects">Projetos</a></li>
+                    <hr color="yellow">
+                    <li><a href="https://github.com/otaviob12" target="_blank">GitHub</a></li>
+                    <hr color="yellow">
+                    <li><a href="https://www.linkedin.com/in/otavio-augusto-grandsire-baroni-58884515b/"
+                            target="_blank">Linkedin</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-        <section class="sobre" id="foto">
-            <img src="img/eu.jpeg" alt="Foto otavio" class="foto">
-            <div class="text">
-                <h1>Sobre Mim:</h1>
-                <p>Me chamo Otavio Baroni, tenho 21 anos e moro em Varginha-MG. Busco uma vaga voltada para área do Front-end, assim posso da iníco a minha carreira como programador. Estou disposto a aprender tecnologias novas, sou esforçado e dedicado, estou sempre querendo aprender, meu objetivo é entrar para uma equipe para somar,  ajudando quem precisa e buscando o máximo de conhecimento sem medo das dificuldades.</p>
-                <p>Estou no 3º semestre de Análise e desenvolvimento de sistemas pela Estácio.</p>
+    <section class="sobre" id="foto">
+        <img src="img/eu.jpeg" alt="Foto otavio" class="foto">
+        <div class="text">
+            <h1>Sobre Mim:</h1>
+            <p>Me chamo Otavio Baroni, tenho 21 anos e moro em Varginha-MG. Busco uma vaga voltada para área do
+                Front-end, assim posso da iníco a minha carreira como programador. Estou disposto a aprender tecnologias
+                novas, sou esforçado e dedicado, estou sempre querendo aprender, meu objetivo é entrar para uma equipe
+                para somar, ajudando quem precisa e buscando o máximo de conhecimento sem medo das dificuldades.</p>
+            <p>Estou no 3º semestre de Análise e desenvolvimento de sistemas pela Estácio.</p>
+        </div>
+    </section>
+    <section class="habilidades">
+        <h1>Habilidades:</h1>
+        <div class="container-hab">
+            <div class="logo">
+                <img class="logo1" src="img/logo-html.png" alt="">
             </div>
-        </section>
-        <section class="habilidades">
-            <h1>Habilidades:</h1>
-            <div class="container-hab">
-                <div class="logo">
-                    <img class="logo1" src="img/logo-html.png" alt="">
-                </div>
-                <div class="logo">
-                    <img class="logo1" src="img/logo-css.png" alt="">
-                </div>
-                <div class="logo">
-                    <img class="logo1" src="img/logo-js.png" alt="">
-                </div>
+            <div class="logo">
+                <img class="logo1" src="img/logo-css.png" alt="">
             </div>
-        </section>
-        <section class="projeto" id="projects">
-            <h1>Conheça alguns dos meus projetos</h1>
-            <div class="container">
-                <div class="add">
-                    <a href="https://otaviob12.github.io/projeto-android/" target="_blank">
+            <div class="logo">
+                <img class="logo1" src="img/logo-js.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="projeto" id="projects">
+        <h1>Conheça alguns dos meus projetos</h1>
+        <div class="container">
+            <div class="add">
+                <a href="https://otaviob12.github.io/projeto-android/" target="_blank">
                     <h1>Projeto Android</h1>
-                    
-                    <img src="img/android2.png" alt="Projeto Android" class="android"></a>
-                </div>
-                <div class="add">
-                    <a href="https://otaviob12.github.io/projeto-habitos/" target="_blank">
+
+                    <img src="img/android2.png" alt="Projeto Android" class="android">
+                </a>
+            </div>
+            <div class="add">
+                <a href="https://otaviob12.github.io/projeto-habitos/" target="_blank">
                     <h1>Projeto habitos</h1>
-                    <img src="img/habitos.png" alt="Projeto Android" class="habitos"></a>
-                </div>
-                <div class="add">
-                    <a href="https://otaviob12.github.io/projeto-login/" target="_blank">
+                    <img src="img/habitos.png" alt="Projeto Android" class="habitos">
+                </a>
+            </div>
+            <div class="add">
+                <a href="https://otaviob12.github.io/projeto-login/" target="_blank">
                     <h1>Projeto Login</h1>
-                    <img src="img/login" alt="Tela Login" class="login"></a>
-                </div>
+                    <img src="img/login" alt="Tela Login" class="login">
+                </a>
             </div>
-            <div class="container">
-                <div class="add">
-                    <a href="https://otaviob12.github.io/jogo-da-velha/" target="_blank">
+        </div>
+        <div class="container">
+            <div class="add">
+                <a href="https://otaviob12.github.io/jogo-da-velha/" target="_blank">
                     <h1>Jogo da Velha</h1>
-                    <img src="img/jogo-da-velha.png" alt="Jogo da velha" class="jdv"></a>
-                </div>
-                <div class="add">
-                    <a href="https://otaviob12.github.io/projeto-calculadora/" target="_blank">
+                    <img src="img/jogo-da-velha.png" alt="Jogo da velha" class="jdv">
+                </a>
+            </div>
+            <div class="add">
+                <a href="https://otaviob12.github.io/projeto-calculadora/" target="_blank">
                     <h1>Calculadora</h1>
-                    <img src="img/calc.png" alt="calculadora" class="calc"></a>
-                </div>
-                <div class="add">
-                    <a href="https://otaviob12.github.io/lista-tarefa/" target="_blank">
+                    <img src="img/calc.png" alt="calculadora" class="calc">
+                </a>
+            </div>
+            <div class="add">
+                <a href="https://otaviob12.github.io/lista-tarefa/" target="_blank">
                     <h1>Lista de Tarefa</h1>
-                    <img src="img/lista-tarefa.png" alt="Lista de tarefa" class="ldf"></a>
-                </div>
+                    <img src="img/lista-tarefa.png" alt="Lista de tarefa" class="ldf">
+                </a>
             </div>
-        </section>
-        <section class="projeto">
-            <div class="container">
-                <div class="add1">
-                    <a href="https://moveissanmarino.netlify.app/" target="_blank">
+        </div>
+    </section>
+    <section class="projeto">
+        <div class="container">
+            <div class="add1">
+                <a href="https://moveissanmarino.netlify.app/" target="_blank">
                     <h1>Projeto Sanmarino</h1>
-                    <p>O projeto foi realizado para uma empresa de moveis em Varginha-MG. O projeto tinha como objetivo de ser usado para Portfólio da mesma.</p>
-                    <img src="img/projeto-san.png" alt="Jogo da velha" class="san"></a>
+                    <p>O projeto foi realizado para uma empresa de moveis em Varginha-MG. O projeto tinha como objetivo
+                        de ser usado para Portfólio da mesma.</p>
+                    <img src="img/projeto-san.png" alt="Jogo da velha" class="san">
+                </a>
             </div>
-        </section>
-        <footer>
-            <p>Desenvolvido por <a href="https://github.com/otaviob12" target="_blank">Otavio Augusto</a>.</p>
-            <p>Portfólio está em desenvolvimeto.</p>
-        </footer>
+    </section>
+    <footer>
+        <p>Desenvolvido por <a href="https://github.com/otaviob12" target="_blank">Otavio Augusto</a>.</p>
+        <p>Portfólio está em desenvolvimeto.</p>
+    </footer>
 </body>
+
 </html>
