--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+    
 
 </head>
 
@@ -51,75 +52,86 @@
         <h1>Habilidades:</h1>
         <div class="container-hab">
             <div class="logo">
-                <img class="logo1" src="img/logo-html.png" alt="">
+                <img class="logo1" src="img/logo-html.png" alt="logo HTML">
             </div>
             <div class="logo">
-                <img class="logo1" src="img/logo-css.png" alt="">
+                <img class="logo1" src="img/logo-css.png" alt="logo CSS">
             </div>
             <div class="logo">
-                <img class="logo1" src="img/logo-js.png" alt="">
+                <img class="logo1" src="img/logo-js.png" alt="logo JS">
             </div>
         </div>
+        <h1>Estudando:</h1>
+        <div class="container-hab">
+            <div class="logo">
+                <img class="logo1" src="img/react.png" alt="logo react">
+            </div>
+            <div class="logo">
+                <img class="logo1" src="img/redux.png" alt="logo Redux">
+            </div>
+        </div> 
+
     </section>
     <section class="projeto" id="projects">
         <h1>Conheça alguns dos meus projetos</h1>
-        <div class="container">
-            <div class="add">
-                <a href="https://otaviob12.github.io/projeto-android/" target="_blank">
-                    <h1>Projeto Android</h1>
+        <div class="slider">
 
-                    <img src="img/android2.png" alt="Projeto Android" class="android">
-                </a>
-            </div>
-            <div class="add">
-                <a href="https://otaviob12.github.io/projeto-habitos/" target="_blank">
-                    <h1>Projeto habitos</h1>
-                    <img src="img/habitos.png" alt="Projeto Android" class="habitos">
-                </a>
-            </div>
-            <div class="add">
-                <a href="https://otaviob12.github.io/projeto-login/" target="_blank">
-                    <h1>Projeto Login</h1>
-                    <img src="img/login" alt="Tela Login" class="login">
-                </a>
+            <div class="slides">
+                <input type="radio" name="radio-btn" id="radio1">
+                <input type="radio" name="radio-btn" id="radio2">
+                <input type="radio" name="radio-btn" id="radio3">
+                <input type="radio" name="radio-btn" id="radio4">
+                <input type="radio" name="radio-btn" id="radio5">
+                <input type="radio" name="radio-btn" id="radio6">
+                <input type="radio" name="radio-btn" id="radio7">
+
+                <div class="slide first">
+                    <a href="https://otaviob12.github.io/projeto-login/" target="_blank"><img src="img/login" alt=""></a>
+                </div>
+                <div class="slide">
+                    <a href="https://otaviob12.github.io/projeto-android/" target="_blank"><img src="img/android2.png" alt=""></a>
+                </div>
+                <div class="slide">
+                    <a href="https://otaviob12.github.io/projeto-calculadora/" target="_blank"><img src="img/calc.png" class="calc" alt=""></a>
+                </div>
+                <div class="slide">
+                    <a href="https://otaviob12.github.io/projeto-habitos/" target="_blank"><img src="img/habitos.png" alt=""></a>
+                </div>
+                <div class="slide">
+                    <a href="https://otaviob12.github.io/jogo-da-velha/" target="_blank"><img src="img/jogo-da-velha.png" class="calc" alt=""></a>
+                </div>
+                <div class="slide">
+                    <a href="https://otaviob12.github.io/lista-tarefa/" target="_blank"><img src="img/lista-tarefa.png" class="calc" alt=""></a>
+                </div>
+                <div class="slide">
+                    <a href="https://otaviob12.github.io/projeto-sanmarino-copia/" target="_blank"><img src="img/projeto-san.png" alt=""></a>
+                </div>
+
+                <div class="navigation-auto">
+                    <div class="auto-btn1"></div>
+                    <div class="auto-btn2"></div>
+                    <div class="auto-btn3"></div>
+                    <div class="auto-btn4"></div>
+                    <div class="auto-btn5"></div>
+                    <div class="auto-btn6"></div>
+                    <div class="auto-btn7"></div>
+                </div>
+            </div>  
+            <div class="manual-navigation">
+                <label for="radio1" class="manual-btn"></label>
+                <label for="radio2" class="manual-btn"></label>
+                <label for="radio3" class="manual-btn"></label>
+                <label for="radio4" class="manual-btn"></label>
+                <label for="radio5" class="manual-btn"></label>
+                <label for="radio6" class="manual-btn"></label>
+                <label for="radio7" class="manual-btn"></label>
             </div>
         </div>
-        <div class="container">
-            <div class="add">
-                <a href="https://otaviob12.github.io/jogo-da-velha/" target="_blank">
-                    <h1>Jogo da Velha</h1>
-                    <img src="img/jogo-da-velha.png" alt="Jogo da velha" class="jdv">
-                </a>
-            </div>
-            <div class="add">
-                <a href="https://otaviob12.github.io/projeto-calculadora/" target="_blank">
-                    <h1>Calculadora</h1>
-                    <img src="img/calc.png" alt="calculadora" class="calc">
-                </a>
-            </div>
-            <div class="add">
-                <a href="https://otaviob12.github.io/lista-tarefa/" target="_blank">
-                    <h1>Lista de Tarefa</h1>
-                    <img src="img/lista-tarefa.png" alt="Lista de tarefa" class="ldf">
-                </a>
-            </div>
-        </div>
-    </section>
-    <section class="projeto">
-        <div class="container">
-            <div class="add1">
-                <a href="https://moveissanmarino.netlify.app/" target="_blank">
-                    <h1>Projeto Sanmarino</h1>
-                    <p>O projeto foi realizado para uma empresa de moveis em Varginha-MG. O projeto tinha como objetivo
-                        de ser usado para Portfólio da mesma.</p>
-                    <img src="img/projeto-san.png" alt="Jogo da velha" class="san">
-                </a>
-            </div>
-    </section>
-    <footer>
-        <p>Desenvolvido por <a href="https://github.com/otaviob12" target="_blank">Otavio Augusto</a>.</p>
-        <p>Portfólio está em desenvolvimeto.</p>
-    </footer>
+        <footer>
+            <p>Desenvolvido por <a href="https://github.com/otaviob12" target="_blank">Otavio Augusto</a>.</p>
+            <p>Portfólio está em desenvolvimeto.</p>
+        </footer>
+        <script src="script.js"></script>
 </body>
 
 </html>
