--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <h1>Estudando:</h1>
-        <div class="container-hab">
+        <div class="container-est">
             <div class="logo">
                 <img class="logo1" src="img/react.png" alt="logo react">
             </div>
