--- a/index.html
+++ b/index.html
@@ -76,14 +76,12 @@
         <h1>Conheça alguns dos meus projetos</h1>
         <div class="slider">
 
-            <div class="slides">
+            <div class="slides" id="silder">
                 <input type="radio" name="radio-btn" id="radio1">
                 <input type="radio" name="radio-btn" id="radio2">
                 <input type="radio" name="radio-btn" id="radio3">
                 <input type="radio" name="radio-btn" id="radio4">
                 <input type="radio" name="radio-btn" id="radio5">
-                <input type="radio" name="radio-btn" id="radio6">
-                <input type="radio" name="radio-btn" id="radio7">
 
                 <div class="slide first">
                     <a href="https://otaviob12.github.io/projeto-login/" target="_blank"><img src="img/login" alt=""></a>
@@ -92,13 +90,7 @@
                     <a href="https://otaviob12.github.io/projeto-android/" target="_blank"><img src="img/android2.png" alt=""></a>
                 </div>
                 <div class="slide">
-                    <a href="https://otaviob12.github.io/projeto-calculadora/" target="_blank"><img src="img/calc.png" class="calc" alt=""></a>
-                </div>
-                <div class="slide">
                     <a href="https://otaviob12.github.io/projeto-habitos/" target="_blank"><img src="img/habitos.png" alt=""></a>
-                </div>
-                <div class="slide">
-                    <a href="https://otaviob12.github.io/jogo-da-velha/" target="_blank"><img src="img/jogo-da-velha.png" class="calc" alt=""></a>
                 </div>
                 <div class="slide">
                     <a href="https://otaviob12.github.io/lista-tarefa/" target="_blank"><img src="img/lista-tarefa.png" class="calc" alt=""></a>
@@ -113,8 +105,6 @@
                     <div class="auto-btn3"></div>
                     <div class="auto-btn4"></div>
                     <div class="auto-btn5"></div>
-                    <div class="auto-btn6"></div>
-                    <div class="auto-btn7"></div>
                 </div>
             </div>  
             <div class="manual-navigation">
@@ -123,8 +113,6 @@
                 <label for="radio3" class="manual-btn"></label>
                 <label for="radio4" class="manual-btn"></label>
                 <label for="radio5" class="manual-btn"></label>
-                <label for="radio6" class="manual-btn"></label>
-                <label for="radio7" class="manual-btn"></label>
             </div>
         </div>
         <footer>
